--- a/windows/installer/moonshot-msetup.wxs
+++ b/windows/installer/moonshot-msetup.wxs
@@ -19,7 +19,7 @@
              SummaryCodepage="1252" AdminImage="no"
              Platform="$(var.Platform)" />
     <Directory Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="D_Module" Name="." FileSource="$(var.BinDir)">
+      <Directory Id="D_Module" Name="Moonshot" FileSource="$(var.BinDir)">
         <Component Id="C_MSetup"
                    Guid="$(var.GuidMSetup)"
                    Win64="$(var.Win64)">
